# procesar-imagenes-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py
app/auth/: cli.py  config_compat.py  models.py  rate_limit.py  router.py  schemas.py  security.py  service.py  tokens.py
app/procesamiento/: gemini_client.py  models.py  schemas.py  worker.py
app/procesamiento/routers/: config.py  imagenes.py  procesamiento.py
app/users/: router.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_cli.py  test_rate_limit.py  test_security.py  test_users.py
tests/procesamiento/: test_config.py  test_gemini_client.py  test_imagenes.py  test_procesamiento.py  test_recovery.py  test_worker.py
