[project]
name = "contadores-api"
version = "0.1.0"
description = "Mock FastAPI backend for the contadores-ui SPA."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "google-genai>=2.10,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]